syntax = "proto3";

package api.pyramid_manage.v1;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
option go_package = "pyramid/pyramid-manage/backend/api/backend/v1;v1";
option java_multiple_files = true;
option java_package = "api.pyramid_manage.v1";

message BaseReply{
  int64 code = 1;
  string message = 2;
}

message Cert{
  int64 cert_type = 1;
  int64 cert_use = 2;
  string cert = 3;
  string private_key = 4;
  string public_key = 5;
  string  org_id = 6;
  string  org_name = 7;
  string cert_user_name = 8;
  string node_name = 9;
  int64  algorithm = 10;
  string addr = 11;
  string remark_name = 12;
  string  chain_mode = 13;
}

message Organization{
  string  org_id = 1;
  string org_name = 2;
  int64 algorithm = 3;
  int64 ca_type = 4;
  repeated string leader_orges = 5;
  Cert cert = 6;
}



service pyramid {
  rpc GetOrganization (Organization)returns(Organization){
    option (google.api.http) = {
      get: "/api/v1/pyramid/sys_chain/organization"
    };
  };

  rpc CreateOrganization (Organization)returns(BaseReply){
    option (google.api.http) = {
      post: "/api/v1/pyramid/sys_chain/organization"
      body:"*",
    };
  };
}
